--- a/main.css
+++ b/main.css
@@ -28,3 +28,24 @@ font-family: 'Press Start 2P', cursive;
 li a:hover {
     background-color: black;
 }
+
+section {
+    padding: 20px;
+    border: 1px dashed red;
+    margin: 10px;
+    border-radius: 10px;
+}
+
+section:last-of-type {
+    margin-bottom: 50px;
+}
+
+footer {
+    color: white;
+    background-color: #333;
+    position: fixed;
+    width: 100%;
+    left: 0;
+    bottom: 0;
+    height: 30px;
+}
