--- a/main.css
+++ b/main.css
@@ -60,3 +60,15 @@ footer {
 .card img {
     width: 100%;
 }
+
+.people-card {
+    border: 1px solid red;
+    width: 30%;
+    float: left;
+    margin: 5px;
+}
+
+.people-card img {
+    width: 100%;
+    height: 450px
+}
